# running-pattern-analysis

./: .gitignore  EXAMPLE.md  Makefile  README.md  pyproject.toml
src/rpa/: __init__.py  __main__.py  augment.py  batch_process.py  create_augmented_split.py  dataset_split.py  dataset_stats.py  inference.py  overfit_test.py  process_runners.py  train.py  transform.py
src/rpa/experiment/: __init__.py  __main__.py  config.py  results.py  runner.py
